Add Use Case: Sign Up of Project DSCatalog